test/src/e2e_vm_tests/test_programs/should_pass/language/use_full_path_names/src/a_dependency.sw
library foo;

pub struct Foo {
    foo: u32,
}
