test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_multiplicity/src/event_indexed_attr.sw
library;

#[event]
#[event, event]
pub struct NotOk { }

#[event]
pub struct NotOk2 {
    #[indexed, indexed]
    a: u32
}
